# -APACHE-SPARK-COM-DELTA-LAKE-E-APACHE-ICEBERG

./: .gitignore  .python-version  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/processed/: usuarios.parquet
data/raw/: dados_originais.csv
docs/: delta-lake.md  iceberg.md  index.md  mkdocs.yml
examples/: uso_delta.py  uso_iceberg.py
iac/terraform/: spark_cluster.tf
meu_projeto/: __init__.py  config.py  main.py  pipeline.py
scripts/: converte_csv_para_parquet.py  processa_dados.sh
src/delta/: delta-lake.ipynb  delta_table.py
src/iceberg/: iceberg.ipynb  iceberg_table.py
tests/: test_delta_table.py  test_iceberg_table.py
